[package]
name = "juste"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
authors = ["Effendi Saputra <effendi.saputra01@gmail.com>"]
description = "Brutalist UI engine."
readme = "README.md"
repository = "https://github.com/Hoyoll/juste"
categories = ["gui", "ui", "rendering"]
keywords = ["ui", "engine", "functional", "minimal", "brutalist"]

[dependencies]
